# test_fast_api

./: README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
container/fastAPI/: Dockerfile  entrypoint.sh
container/fastapi/: Dockerfile  entrypoint.sh
container/mysql/: Dockerfile  init.sql
tests/: test_main.py
